# nxscli-pqg

./: .coveragerc  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: master.yml
docs/: usage.rst
src/nxscli_pqg/: _animation_common.py  _animation_lifecycle.py  _plot_api.py  _plot_constants.py  _plot_data.py  _plot_factory.py  _plot_format.py  _plot_lifecycle.py  _plot_surface.py  _pqg_manager.py  _registry.py  animation_pqg.py  ext_commands.py  ext_plugins.py  plot_pqg.py
src/nxscli_pqg/cli/: types.py
src/nxscli_pqg/commands/: _common.py  cmd_ani1.py  cmd_ani2.py  cmd_cap.py  cmd_fft.py  cmd_fft_stream.py  cmd_hist.py  cmd_hist_stream.py  cmd_polar.py  cmd_polar_stream.py  cmd_xy.py  cmd_xy_stream.py
src/nxscli_pqg/commands/config/: cmd_pqg.py
src/nxscli_pqg/plugins/: _static_common.py  _typed_static.py  _typed_static_strategies.py  _typed_windowed.py  _typed_windowed_strategies.py  _windowed_common.py  fft.py  histogram.py  live.py  polar.py  roll.py  snap.py  xy.py
tests/: conftest.py  helpers.py  test_animationpqg.py  test_nxsclipqg.py  test_plotpqg.py
tests/cli/: test_main.py  test_types.py
tests/plugins/: test_live.py  test_roll.py  test_snap.py  test_windowed.py
